Expand Units view layout, add unit steps UI, and update AI/Units integration

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400..700&family=Poppins:wght@500;700;800&display=swap" rel="stylesheet">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64'%3E%3Ctext y='50' font-size='48'%3E🎯%3C/text%3E%3C/svg%3E">
   <link rel="stylesheet" href="/ui.css?v=kids12">
+  <link rel="stylesheet" href="/unit-steps.css?v=1">
 
 </head>
 <body class="kids">
